Archive2/eb/17942262c1a8fb/main.cpp
#include <string>
#include <stdio.h>
#include "iostream"

int main()
{
    std::to_string(0);
    std:cout << "1234124123!!! !!! ___ !!!";
    
    return 0;
}